todo-backend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: heclll/todo-backend:1.5
          resources:
            requests:
              cpu: 2m
              memory: 30Mi
            limits:
              cpu: 20m
              memory: 100Mi
