todo-backend/manifests/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-svc
  namespace: project
  labels:
    app: postgres
spec:
  ports:
  - port: 5432
    name: postgres
  clusterIP: None
  selector:
    app: postgresapp
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: project
spec:
  serviceName: postgres-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgresapp
  template:
    metadata:
      labels:
        app: postgresapp
    spec:
      containers:
        - name: postgres
          image: postgres
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-pv-claim
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-pv-claim
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: standard-rwo
        resources:
          requests:
            storage: 10Gi
