todo-backend/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - port: 1123
      protocol: TCP
      targetPort: 3000
